Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105063

QtWebEngineProcess might sometimes be left running after Terminate All from visual studio

XMLWordPrintable

    • Windows
    • f07fb08039 (qt/qtwebengine-chromium/102-based) 5a0df5283f (qt/qtwebengine-chromium/98-based), dbff76d2a (134-based-refactor)

      Debug any application with WebEngine through Visual Studio and do Debug -> Terminate all to kill it. Sometimes QtWebEngineProcess.exe is left running in the background. This is random so it is not easy to reproduce and thus I don't know if Qt 6 is affected by this.

      Stack trace of the stuck process looks like:

      KernelBase.dll!00007ffa6fbf1ace() Unknown
      Qt5WebEngineCoreNX.dll!base::WaitableEvent::Wait() Line 74 C++
      > Qt5WebEngineCoreNX.dll!viz::Gpu::EstablishGpuChannelSync() Line 339 C++
      Qt5WebEngineCoreNX.dll!content::RenderThreadImpl::EstablishGpuChannelSync() Line 1642 C++
      Qt5WebEngineCoreNX.dll!content::RenderThreadImpl::RequestNewLayerTreeFrameSink(content::RenderWidget * render_widget, const GURL & url, base::OnceCallback<void __cdecl(std::unique_ptr<cc::LayerTreeFrameSink,std::default_delete<cc::LayerTreeFrameSink>>,std::unique_ptr<cc::RenderFrameMetadataObserver,std::default_delete<cc::RenderFrameMetadataObserver>>)> callback, const char * client_name) Line 1725 C++
      Qt5WebEngineCoreNX.dll!content::RenderWidget::RequestNewLayerTreeFrameSink(base::OnceCallback<void __cdecl(std::unique_ptr<cc::LayerTreeFrameSink,std::default_delete<cc::LayerTreeFrameSink>>,std::unique_ptr<cc::RenderFrameMetadataObserver,std::default_delete<cc::RenderFrameMetadataObserver>>)> callback) Line 405 C++
      Qt5WebEngineCoreNX.dll!blink::WebFrameWidgetBase::RequestNewLayerTreeFrameSink(class base::OnceCallback<void >) C++
      Qt5WebEngineCoreNX.dll!blink::WidgetBase::RequestNewLayerTreeFrameSink(class base::OnceCallback<void >) C++
      Qt5WebEngineCoreNX.dll!blink::LayerTreeView::RequestNewLayerTreeFrameSink(void) C++
      Qt5WebEngineCoreNX.dll!base::internal::Invoker<struct base::internal::BindState<void ( blink::WebAudioSourceProviderImpl::*)(void),class base::WeakPtr<class blink::WebAudioSourceProviderImpl> >,void >::Run(class base::internal::BindStateBase *) C++
      [Inline Frame] Qt5WebEngineCoreNX.dll!base::OnceCallback<void __cdecl(void)>::Run() Line 100 C++
      Qt5WebEngineCoreNX.dll!base::TaskAnnotator::RunTask(const char * trace_event_name, base::PendingTask * pending_task) Line 163 C++
      Qt5WebEngineCoreNX.dll!base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl(base::sequence_manager::LazyNow * continuation_lazy_now) Line 333 C++
      Qt5WebEngineCoreNX.dll!base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork() Line 255 C++
      Qt5WebEngineCoreNX.dll!base::MessagePumpDefault::Run(base::MessagePump::Delegate * delegate) Line 40 C++
      Qt5WebEngineCoreNX.dll!base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::Run(bool application_tasks_allowed, base::TimeDelta timeout) Line 454 C++
      Qt5WebEngineCoreNX.dll!base::RunLoop::Run() Line 126 C++
      Qt5WebEngineCoreNX.dll!content::RendererMain(const content::MainFunctionParams & parameters) Line 262 C++
      Qt5WebEngineCoreNX.dll!content::RunOtherNamedProcessTypeMain(const std::string & process_type, const content::MainFunctionParams & main_function_params, content::ContentMainDelegate * delegate) Line 539 C++
      Qt5WebEngineCoreNX.dll!content::ContentMainRunnerImpl::Run(bool start_service_manager_only) Line 871 C++
      Qt5WebEngineCoreNX.dll!content::RunContentProcess(const content::ContentMainParams & params, content::ContentMainRunner * content_main_runner) Line 375 C++
      Qt5WebEngineCoreNX.dll!content::ContentMain(const content::ContentMainParams & params) Line 401 C++
      Qt5WebEngineCoreNX.dll!QtWebEngineCore::processMain(int argc, const char * * argv) Line 85 C++
      QtWebEngineProcess.exe!00007ff6305c9bf4() Unknown
      QtWebEngineProcess.exe!00007ff6306311c7() Unknown
      QtWebEngineProcess.exe!00007ff630630782() Unknown
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            michal Michal Klocek
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes