[gpu] Reland two changes for establishing gpu channel

244709: Stop orphan child processes from staying alive on Windows
https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/244709

Stop orphan child processes from staying alive on Windows
Starting with Qt 5.11, on Windows, when the main
WebEngine process crashed, the child render process would stay alive
and use a whole CPU core trying to do something.
What happened was that an existing layer tree frame sink was
invalidated, and a request to create a new one was issued via
RequestNewLayerTreeFrameSink, which failed due to the main process
being dead, which scheduled a new request, and so on, which caused
the child process main thread message loop to never exit.
In Qt 5.10, this did not happen, because when the first request to
create the sink failed, a new "software sink" was successfully created
that did not depend on the host GPU process thread
(see RenderThreadImpl::RequestNewLayerTreeFrameSink in
render_thread_impl.cc).
Thus the message loop ran out of tasks to execute, and could
gracefully quit.
The "software sink" code branch was removed in Qt 5.11+.
Thus the hacky fix is to try and create the sink only a certain amount
of times, and stop scheduling new requests after that.

------------------------------------------------------------------

426757: Fix endless loop on race condition on qemu startup
https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/426757

Fix endless loop on race condition on qemu startup

Fix a weird race condition which ends in endless loop with
a single-process, when gpu_channel_host is not ready in
WidgetBase::RequestNewLayerTreeFrameSink and calls
callbeck with nullptr, which ends in
LayerTreeView::DidFailToInitializeLayerTreeFrameSink
which again calls RequestNewLayerTreeFrameSink without giving
a chance to initialize channel and round repeats itself.

Give 10ms delay to cover the issue.

------------------------------------------------------------------

Fixes: QTBUG-105063
Task-number: QTBUG-69030
Task-number: QTBUG-105342
Pick-to: 98-based
Change-Id: Icf3e4c75e009ae7b171a9e9ce2a394f8de421737
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>